feat: add prisma service, create account controller and zod validation with swagger in routes

--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "help-forum",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
   "private": true,
-  "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint src --fix",
     "start": "nest start",
-    "dev": "nest start --watch",
-    "dev:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "dev": "nest start -b swc -w",
+    "dev:debug": "nest start -b swc -d -w",
+    "start:prod": "node dist/main"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
-    "@nestjs/platform-fastify": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.13",
+    "@nestjs/swagger": "^11.1.1",
+    "@prisma/client": "^6.5.0",
+    "bcryptjs": "^3.0.2",
+    "nestjs-zod": "^4.3.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "prettier": "^3.4.2",
+    "prisma": "^6.5.0",
     "supertest": "^7.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
