--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.13",
     "@nestjs/swagger": "^11.1.1",
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "nestjs-zod": "^4.3.1",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "zod": "^3.24.2"
@@ -32,6 +36,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
