feat: add tests e2e for controllers, add test environment ambient, refactor directories to use clean architecture

--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,8 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env.dev
+.env.test
 
 # temp directory
 .temp
@@ -54,3 +52,7 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+
+# key files
+*_key.pem
