--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "nest start",
     "dev": "nest start -b swc -w",
     "dev:debug": "nest start -b swc -d -w",
-    "start:prod": "node dist/main"
+    "check-types": "tsc --noEmit",
+    "start:prod": "node build/infra/main",
+    "test": "vitest run --project unit",
+    "test:watch": "vitest --project unit",
+    "test:e2e": "vitest run --project e2e",
+    "test:e2e:watch": "vitest --project e2e"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -20,6 +25,7 @@
     "@nestjs/swagger": "^11.1.1",
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
+    "dayjs": "^1.11.13",
     "nestjs-zod": "^4.3.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
@@ -29,25 +35,29 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@faker-js/faker": "^9.6.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
-    "@nestjs/testing": "^11.0.1",
+    "@nestjs/testing": "^11.0.13",
     "@swc/cli": "^0.6.0",
-    "@swc/core": "^1.10.7",
+    "@swc/core": "^1.11.16",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
-    "@types/supertest": "^6.0.2",
+    "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "^3.1.1",
+    "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "prettier": "^3.4.2",
     "prisma": "^6.5.0",
-    "supertest": "^7.0.0",
+    "supertest": "^7.1.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
+    "unplugin-swc": "^1.5.1",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.1.1"
   }
