chore: configure diferent environments production, development and test with diferente .env files and set env service and module

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "build": "nest build",
     "lint": "eslint src --fix",
     "start": "nest start",
-    "dev": "nest start -b swc -w",
-    "dev:debug": "nest start -b swc -d -w",
+    "dev": "cross-env NODE_ENV=development nest start -b swc -w",
+    "dev:debug": "cross-env NODE_ENV=development nest start -b swc -d -w",
     "check-types": "tsc --noEmit",
     "start:prod": "node build/infra/main",
     "test": "vitest run --project unit",
     "test:watch": "vitest --project unit",
     "test:e2e": "vitest run --project e2e",
-    "test:e2e:watch": "vitest --project e2e"
+    "test:e2e:watch": "vitest --project e2e",
+    "db:generate": "prisma generate",
+    "db:migrate": "dotenv -e .env.dev prisma migrate dev",
+    "db:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -46,7 +49,9 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.1.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
