--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,8 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.dev
+.env.production
+.env.development
 .env.test
 
 # temp directory
