--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "lint": "eslint src --fix",
     "start": "nest start",
     "dev": "cross-env NODE_ENV=development nest start -b swc -w",
-    "dev:debug": "cross-env NODE_ENV=development nest start -b swc -d -w",
     "check-types": "tsc --noEmit",
     "start:prod": "node build/infra/main",
     "test": "vitest run --project unit",
     "test:watch": "vitest --project unit",
     "test:e2e": "vitest run --project e2e",
     "test:e2e:watch": "vitest --project e2e",
+    "create-bucket": "cross-env NODE_ENV=development tsx scripts/create-bucket.ts",
     "db:generate": "prisma generate",
     "db:migrate": "dotenv -e .env.dev prisma migrate dev",
     "db:deploy": "prisma migrate deploy"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -45,6 +46,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.11.16",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.3",
@@ -60,6 +62,7 @@
     "prisma": "^6.5.0",
     "supertest": "^7.1.0",
     "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
     "unplugin-swc": "^1.5.1",
