--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "dayjs": "^1.11.13",
+    "ioredis": "^5.6.1",
     "nestjs-zod": "^4.3.1",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
